Initial GUI Done

--- a/src/template.html
+++ b/src/template.html
@@ -3,14 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Title</title>
+    <script src="./scripts/runapp.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Learning API (Giphy)</title>
   </head>
   <body>
     <header>
+      <div class="container">
+        <h1 class="page-title">Learning API (Giphy)</h1>
+      </div>
     </header>
     <main>
+      <div class="container">
+        <div class="input-div">
+          <label for="api-key">Enter API Key</label>
+          <input type="text" id="api-key" />
+          <label for="search-phrase">Search Phrase</label>
+          <input type="text" id="search-phrase" />
+        </div>
+        <div class="buttons-div">
+          <button class="action-btn" id="btn-go">Go!</button>
+          <button class="action-btn" id="btn-retry">Retry</button>
+        </div>
+        <div class="image-frame">
+          <img src="./assets/images/me.jpg" alt="" />
+        </div>
+        <div class="random-facts-frame">
+          <h2 class="fact-heading">Fun Facts</h2>
+          <p class="random-facts">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Praesentium eos laudantium architecto dolore quos beatae maxime
+            rerum aliquam ullam eum neque voluptatem, recusandae laborum
+            cupiditate ex aut eligendi consectetur molestiae?
+          </p>
+        </div>
+      </div>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
   </body>
 </html>
