--- a/src/template.html
+++ b/src/template.html
@@ -24,11 +24,10 @@
         </div>
         <div class="buttons-div">
           <button class="action-btn" id="btn-go">Go!</button>
-          <button class="action-btn" id="btn-retry">Retry</button>
         </div>
         <div class="image-frame">
-          <img id="image" src="./assets/images/me.jpg" alt="" />
-          <p id="prompt" class="superimposed-text">Powered by Giphy</p>
+          <img id="image" src="./assets/images/404.jpg" alt="" />
+          <p id="prompt" class="superimposed-text"></p>
         </div>
         <div class="random-facts-frame">
           <h2 class="fact-heading">Fun Facts</h2>
