--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./scripts/runapp.js"></script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <script src="./scripts/runapp.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" /> -->
     <script src="./scripts/runapp.js"></script>
     <title>Learning API (Giphy)</title>
   </head>
