--- a/src/template.html
+++ b/src/template.html
@@ -26,10 +26,10 @@
           <button class="action-btn" id="btn-go">Go!</button>
         </div>
         <div class="image-frame">
-          <img id="image" src="./assets/images/404.jpg" alt="" />
+          <img id="image" src="#" alt="" />
           <p id="prompt" class="superimposed-text"></p>
         </div>
-        <div class="random-facts-frame">
+        <div class="random-facts-frame hidden">
           <h2 class="fact-heading">Fun Facts</h2>
           <p id="facts" class="random-facts">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
