--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,7 @@
           <p id="prompt" class="superimposed-text"></p>
         </div>
         <div class="random-facts-frame hidden">
-          <h2 class="fact-heading">Fun Facts</h2>
+          <h2 class="fact-heading">Top News</h2>
           <p id="facts" class="random-facts">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Praesentium eos laudantium architecto dolore quos beatae maxime
