--- a/src/template.html
+++ b/src/template.html
@@ -30,8 +30,7 @@
           <p id="prompt" class="superimposed-text"></p>
         </div>
         <div class="random-facts-frame hidden">
-          <h2 class="fact-heading">Top News</h2>
-          <p id="facts" class="random-facts">
+          <p id="random-facts" class="random-facts scrolling-text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Praesentium eos laudantium architecto dolore quos beatae maxime
             rerum aliquam ullam eum neque voluptatem, recusandae laborum
