--- a/src/template.html
+++ b/src/template.html
@@ -17,10 +17,10 @@
     <main>
       <div class="container">
         <div class="input-div">
-          <label for="api-key">Enter API Key</label>
-          <input type="text" id="api-key" name="api-key" required/>
+          <!-- <label for="api-key">Enter API Key</label>
+          <input type="text" id="api-key" name="api-key" required/> -->
           <label for="search-phrase">Search Phrase</label>
-          <input type="text" id="search-phrase" name="search-phrase" required/>
+          <input type="text" id="search-phrase" name="search-phrase" required />
         </div>
         <div class="buttons-div">
           <button class="action-btn" id="btn-go">Go!</button>
