Async/Await conversion done

--- a/src/template.html
+++ b/src/template.html
@@ -30,12 +30,7 @@
           <p id="prompt" class="superimposed-text"></p>
         </div>
         <div class="random-facts-frame hidden">
-          <p id="random-facts" class="random-facts scrolling-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Praesentium eos laudantium architecto dolore quos beatae maxime
-            rerum aliquam ullam eum neque voluptatem, recusandae laborum
-            cupiditate ex aut eligendi consectetur molestiae?
-          </p>
+          <p id="random-facts" class="random-facts scrolling-text"></p>
         </div>
       </div>
     </main>
